getpakistan.com (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;entertainment;newsandmedia",
  "char_count": 5740,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.89,
  "homepage_snapshot_redirected_domain": "getpakistan.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929024929id_/http://getpakistan.com/home/index.htm",
  "homepage_snapshot_url": "https://web.archive.org/web/20040924235751id_/http%3A//getpakistan.com",
  "interval": "2004_B",
  "link_text": "Read our privacy statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "getpakistan.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204161849id_/http%3A//www.getpakistan.com/home/gpc/privacy.htm",
  "policy_title": "getPakistan.com: Privacy Policy",
  "policy_url": "getpakistan.com/home/gpc/privacy.htm",
  "sha1": "98bc9594c701380cc7ce41b573a8bb29e64bee50",
  "simhash": 2652243534464950771,
  "simhash_updated": false,
  "site_hostname": "getpakistan.com",
  "site_url": "http://getpakistan.com",
  "smog": 14.17,
  "strict_updated": true,
  "timestamp": "20041204161849",
  "word_count": 923,
  "year": 2004
}

--- a/g/ge/get/getpakistan.com.html
+++ b/g/ge/get/getpakistan.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the getpakistan.com privacy policy that was archived on 2001-04-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010412233652id_/http%3A//www.getpakistan.com/home/gpc/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the getpakistan.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204161849id_/http%3A//www.getpakistan.com/home/gpc/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="description" content="Get Pakistan.Com">
@@ -10,26 +10,11 @@
 <meta name="Microsoft Border" content="tb">
 </head>
 
-<body topmargin="0" bgcolor="#FFFFFF" text="#000000" link="#008000" vlink="#008000" alink="#008000" leftmargin="0" background="../../images/bg.gif"><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td>
+<body topmargin="0" bgcolor="#FFFFFF" text="#000000" link="#008000" vlink="#008000" alink="#008000" leftmargin="0" background="../images/bg.gif"><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td>
 
-<table border="0" width="750" cellspacing="0" cellpadding="0" height="53">
-  <tbody><tr>
-    <td align="left" bgcolor="#000000" height="53"><map name="FPMap0">
-      <area href="http://www.getPakistan.com/index.htm" coords="7, 17, 217, 59" shape="rect">
-      <area href="../../radio/" coords="237, 6, 282, 55" shape="rect">
-      <area href="../../expressmail/" coords="288, 7, 355, 56" shape="rect">
-      <area href="http://www.getpakistan.cc/Merchant2/merchant.mv?Screen=CTGY&amp;Store_Code=gpcstore&amp;Category_Code=gifts" shape="rect" coords="363, 2, 429, 56">
-      <area href="../../store/" coords="438, 0, 516, 56" shape="rect">
-      <area href="../../matrimonial/" coords="520, 2, 580, 55" shape="rect">
-      <area href="http://www.getpakistan.cc/Merchant2/merchant.mv?Screen=CTGY&amp;Store_Code=gpcstore&amp;Category_Code=phonecards" shape="rect" coords="588, 2, 657, 56">
-      <area href="../about_pakistan/imm.htm" coords="663, 0, 733, 58" shape="rect">
-      <area href="aboutus.htm" coords="8, 0, 60, 15" shape="rect">
-      <area href="aboutyou.htm" coords="75, 0, 133, 15" shape="rect">
-      <area href="contactus.htm" coords="146, 3, 213, 14" shape="rect"></map><img rectangle="(288,7) (355,56) expressmail/" border="0" src="../../images/buttons/shared_border/top_bar_big1.gif" usemap="#FPMap0" width="750" height="60"></td>
-  </tr>
-</tbody></table>
+<a href="http://www.getPakistan.com"><img border="0" src="../../images/Corporate_Logos/corporate_logo.gif" width="300" height="69"></a>
 
-</td></tr><!--msnavigation--></tbody></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><!--msnavigation--><td valign="top">
+</td></tr><!--msnavigation--></tbody></table><!--msnavigation--><table dir="ltr" border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><!--msnavigation--><td valign="top">
 
 <div align="left">
   <table border="0" cellpadding="0" cellspacing="1" width="600">
@@ -56,9 +41,8 @@
     //-->
     </script>
         <noscript>
-	    <IFRAME WIDTH=468 HEIGHT=60 SRC="http://ad-adex7.flycast.com/server/iframe/getPakistancom/runofsite/123456" scrolling="no" marginwidth=0 marginheight=0 frameborder=0 vspace=0 hspace=0>
-        <a target="_top" href="http://ad-adex7.flycast.com/server/click/getPakistancom/runofsite/123456"><img border="0" src="http://ad-adex7.flycast.com/server/img/getPakistancom/runofsite/123456" width="468" height="60"></a>
-	    </IFRAME>
+	    <IFRAME WIDTH=468 HEIGHT=60 SRC="http://ad-adex7.flycast.com/server/iframe/getPakistancom/runofsite/123456" scrolling="no" marginwidth=0 marginheight=0 frameborder=0 vspace=0 hspace=0>&nbsp;
+        </IFRAME>
         </noscript>
         <!--End Flycast Ad Copyright 1999 Flycast Communications. All rights reserved. Patent Pending -->
       </p></td>
@@ -70,27 +54,24 @@
     </tr>
     <tr>
       <td width="100%"><font face="Verdana" size="2" color="#000000">getPakistan.com
-        Inc.</font><font face="Verdana" size="2" color="#000000"> has created
+        Inc. has created
         this privacy statement in order to demonstrate our firm commitment to
         privacy. The following discloses our information gathering and
-        dissemination practices for this website: getPakistan.com.</font>
+        dissemination practices for getPakistan.com.</font>
         <p><font face="Verdana" size="2" color="#000000">We use your IP address
         to help diagnose problems with our server, and to administer our Web
         site.</font></p>
-        <p><font face="Verdana" size="2" color="#000000">Our site's registration
-        form requires users to give us contact information (like their name and
+        <p><font face="Verdana" size="2" color="#000000">Our site's membership form requires users to give us contact information (like their name and
         email address) and demographic information (like their zip code, age, or
-        income level). We use customer contact information from the registration
-        form to send the user information about our company and promotional
-        material from some of our partners. The customer's contact information
+        income level). We use customer contact information from the membership form to send the user information about our company and
+        its products. The customer's contact information
         is also used to contact the visitor when necessary. Users may opt-out of
         receiving future mailings; see the choice/opt-out section below.
         Demographic and profile data is also collected at our site. We use this
         data for other purposes. We use this data to tailor the visitor's
         experience at our site, showing them content that we think they might be
         interested in, and displaying the content according to their
-        preferences. ** MAKE SURE that you explain the other data that you
-        mentioned you collect here. **</font></p>
+        preferences.&nbsp;</font></p>
         <p><font face="Verdana" size="2" color="#000000">getPakistan.com
         contains links to other sites. getPakistan.com is not responsible for
         the privacy practices or the content of such Web sites.</font></p>
@@ -215,13 +196,11 @@
     </tr>
   </tbody></table>
 </div>
-&nbsp;
+&nbsp;<!--msnavigation--></td></tr><!--msnavigation--></tbody></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td>
 
-<!--msnavigation--></td></tr><!--msnavigation--></tbody></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td>
-
-<table border="0" width="750" cellspacing="0" cellpadding="0">
+<table border="0" width="657" cellspacing="0" cellpadding="0">
   <tbody><tr>
-    <td width="748" bgcolor="#C0C0C0" align="center"><font face="Verdana" size="1" color="#008000"><span style="color: rgb(0,128,0)"><nobr><a style="color: rgb(0,128,0); text-decoration: none" href="http://www.getPakistan.com">Home</a>
+    <td width="657" bgcolor="#CCFF99" align="center"><font face="Verdana" size="1" color="#008000"><span style="color: rgb(0,128,0)"><nobr><a style="color: rgb(0,128,0); text-decoration: none" href="http://www.getPakistan.com">Home</a>
       |&nbsp; <a style="color: rgb(0,128,0); text-decoration: none" href="unsaved:///../expressmail/home/gpc/aboutyou.htm">About
       You</a> | <a style="color: rgb(0,128,0); text-decoration: none" href="unsaved:///../expressmail/home/gpc/aboutus.htm">About
       Us</a>&nbsp;|&nbsp; <a style="color: rgb(0,128,0); text-decoration: none" href="unsaved:///../expressmail/home/gpc/contactus.htm">Contact
@@ -230,7 +209,7 @@
       | <a style="color: rgb(0,128,0); text-decoration: none" href="unsaved:///../expressmail/home/gpc/terms.htm">Terms
       of Use</a> | <a style="color: rgb(0,128,0); text-decoration: none" href="unsaved:///../expressmail/home/gpc/press.htm">Press
       Release</a> | <a style="color: rgb(0,128,0); text-decoration: none" href="unsaved:///../expressmail/home/newsdesk/jobs.htm">Jobs</a><br>
-      &nbsp;getPakistan.com ©1999-2001</nobr></span></font></td>
+      &nbsp;getPakistan.com ©1999-2004</nobr></span></font></td>
   </tr>
 </tbody></table>
 
