--- a/e/ef/efr/efrontier.com.html
+++ b/e/ef/efr/efrontier.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the efrontier.com privacy policy that was archived on 2004-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040623215429id_/http%3A//www.efrontier.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the efrontier.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204162514id_/http%3A//www.efrontier.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 	<title>Efficient Frontier - Privacy Policy</title>
@@ -80,7 +80,14 @@ function imgOff(imgName) {
 			<tbody><tr><td width="563" align="LEFT" valign="TOP">
 				<nobr><img src="images/clear.gif" width="1" height="58" border="0"></nobr><br>
 				<!-- Content -->
-				<img src="images/privacyIntro.gif" width="416" height="169" alt="Privacy Policy" border="0"><br>
+<h1>Privacy Policy</h1>
+
+<p class="intro">Efficient Frontier, Inc. ["Efficient Frontier"] has established
+this Privacy Policy in order to demonstrate its firm commitment to privacy.
+The following policy is applicable to Efficient Frontier's information
+collecting, use and disclosure practices for the Efficient Frontier
+web site. Your use of this site tells us you have read and accept the
+practices outlined in this policy.</p>
 				<nobr><img src="images/clear.gif" width="1" height="28" border="0"></nobr><br>
 				<table width="412" border="0" cellspacing="0" cellpadding="0">
 					<tbody><tr><td width="412" align="LEFT" valign="TOP">
@@ -170,6 +177,7 @@ function imgOff(imgName) {
 						<table width="445" border="0" cellspacing="0" cellpadding="0">
 							<tbody><tr><td width="445" align="RIGHT" valign="TOP">
 								<span class="footer">
+								Copyright ©2004 Efficient Frontier Inc. All rights reserved.<br>
 								<a href="legal.htm" hidefocus="" class="footer">Legal</a>&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
 								<a href="privacy.htm" hidefocus="" class="footer"><span class="footerGold">Privacy Policy</span></a>&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
 								<a href="contact.htm" hidefocus="" class="footer">Contact Us</a>&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
