hostasaurus.com (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 6149,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.81,
  "homepage_snapshot_redirected_domain": "hostasaurus.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001092145id_/http://www.hostasaurus.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001092145id_/http%3A//hostasaurus.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "hostasaurus.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204163155id_/http%3A//www.hostasaurus.com/privacy.php",
  "policy_title": "Hostasaurus Web Hosting, Miva Merchant Hosting, Dedicated Miva Servers",
  "policy_url": "hostasaurus.com/privacy.php",
  "sha1": "4b6c45b7363669425447ccbaaf742fb24e6f8538",
  "simhash": 2164631886663989407,
  "simhash_updated": false,
  "site_hostname": "hostasaurus.com",
  "site_url": "http://hostasaurus.com",
  "smog": 15.34,
  "strict_updated": false,
  "timestamp": "20041204163155",
  "word_count": 973,
  "year": 2004
}

--- a/h/ho/hos/hostasaurus.com.html
+++ b/h/ho/hos/hostasaurus.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hostasaurus.com privacy policy that was archived on 2004-04-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040402033051id_/http%3A//hostasaurus.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hostasaurus.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204163155id_/http%3A//www.hostasaurus.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
   <script language="JAVASCRIPT" type="TEXT/JAVASCRIPT">
@@ -13,7 +13,7 @@
 
   <title>Hostasaurus Web Hosting, Miva Merchant Hosting, Dedicated Miva Servers </title>
   <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-  <meta content="Hostasaurus, web hosting, shopping cart, Miva, domain names, DNS, e-mail, email, hosting, B2B, web hosting, domain names, dino power, DNS, Miva, email, ecommerce, shopping, shopping cart, web pages, domain name registration, registrar, Tampa, Florida, spam, spamblock, customoffers spam, geotrust, thawte, SSL, Merchant, Miva Merchant, miva dedicated hosting, merchant dedicated hosting, miva hosting partnet, opendb hosting partner, miva opendb, athlon dedicated, mr moon, shared merchant hosting, leased merchant, leased opendb, miva merchant 4.18,miva 4.19, miva merchant 4.19, miva 4.16, miva 4.13, Payflow Pro, payflow, verisign, verisign reseller, payflow reseller, veeo ebay auction, auctionplus, veeo, miva-merchant-host, dedicated-miva-hosting, merchant 4, synchro, fast Merchant hosting, high speed Merchant hosting" name="Keywords">
+  <meta content="Hostasaurus, web hosting, shopping cart, Miva, domain names, DNS, e-mail, email, hosting, B2B, web hosting, domain names, dino power, DNS, Miva, email, ecommerce, shopping, shopping cart, web pages, domain name registration, registrar, Tampa, Florida, spam, spamblock, customoffers spam, geotrust, thawte, SSL, Merchant, Miva Merchant, miva dedicated hosting, merchant dedicated hosting, miva hosting partnet, opendb hosting partner, miva opendb, athlon dedicated, mr moon, shared merchant hosting, leased merchant, leased opendb, miva merchant 4.18,miva 4.19, miva merchant 4.19, miva 4.16, miva 4.13, Payflow Pro, payflow, verisign, verisign reseller, payflow reseller, veeo ebay auction, auctionplus, veeo, miva-merchant-host, dedicated-miva-hosting, merchant 4, synchro, fast Merchant hosting, high speed Merchant hosting, Miva Merchant 4.24" name="Keywords">
   <meta content="Our high-speed reliable Miva Merchant enterprise servers and excellent Merchant support are consistently rated as the best in the business.  Free site setup and site transfer with no downtime." name="Description">
 
 <script language="JAVASCRIPT" type="TEXT/JAVASCRIPT">
@@ -25,7 +25,7 @@ function describeFeature(imagjpg) {
 //End hiding script from old browsers -->
 </script>
 <style type="text/css"><!-- span {font-size:12px} background {color:red} --></style>  
-  <link rel="stylesheet" href="dino.css" type="text/css">
+  <link rel="stylesheet" href="/dino.css" type="text/css">
 </head>
 
 <body bgcolor="#3C0757" text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" marginwidth="0" marginheight="0">
@@ -34,7 +34,7 @@ function describeFeature(imagjpg) {
 	<table border="0" cellpadding="0" cellspacing="0" width="100%">
   		<tbody><tr>
     	  
-    <td colspan="2" bgcolor="#6B367F"><a href="http://www.hostasaurus.com/"><img src="images/title_bar.jpg" alt="Hostasaurus Web Hosting with Dino Power" border="0"></a></td>
+    <td bgcolor="#6B367F" colspan="2"><a href="http://www.hostasaurus.com/"><img src="images/title_bar.jpg" alt="Hostasaurus Web Hosting with Dino Power" border="0"></a></td>  
   		</tr>
  		<tr>
     	  <td bgcolor="#FFFFFF" colspan="2"><img src="images/spacer.gif" height="1" width="1" border="0" alt=""></td>    
@@ -78,7 +78,7 @@ function describeFeature(imagjpg) {
 <tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="dedicated.php">&nbsp;Dedicated Hosting&nbsp;</a></span></td> </tr>
 <tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="cart.php">&nbsp;&nbsp;Miva Merchant</a></span><br>
 	<hr width="60%"><span class="textbsm"><a href="payment.php">&nbsp;&nbsp;Payment Gateways</a></span><br>
-	<span class="textbsm"><a href="veeo.php">&nbsp;&nbsp;Veeo AuctionPlus</a></span></td> </tr>
+	<span class="textbsm"><a href="http://secure.hostasaurus.com/merchant.mv?Screen=CTGY&amp;Store_Code=DINO&amp;Category_Code=SSL">&nbsp;&nbsp;SSL Certificates</a></span></td> </tr>
 <tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="lists.php">&nbsp;List Hosting&nbsp;</a></span></td> </tr>
 <tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="email.php">&nbsp;Email Hosting&nbsp;</a></span></td> </tr>
 <tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="dns.php">&nbsp;DNS Services&nbsp;</a></span></td> </tr>
@@ -91,8 +91,8 @@ function describeFeature(imagjpg) {
 						</tbody></table>
 						<center>
 						<br><a href="cart.php"><img src="images/miva-part.gif" alt="Miva Partner Logo" border="0"></a>
+						<br><a href="hosting.php"><img src="images/OUIpartner.jpg" alt="OUI Premier Partner Logo" border="0"></a>
 						<br><a href="cart.php"><img src="images/opendb-hosting-small.gif" alt="Copernicus OpenXB Partner" border="0"></a>
-						<br><a href="veeo.php"><img src="images/veeo-logo.gif" alt="Veeo Auction Plus Logo" border="0"></a>
 						<br><a href="http://secure.hostasaurus.com/merchant.mv?Screen=CTGY&amp;Store_Code=DINO&amp;Category_Code=SSL" target="new"><img src="images/geotrust.gif" alt="Geotrust Partner Logo" border="0"></a>
 						<br><br><a href="http://secure.hostasaurus.com/merchant.mv?Screen=CTGY&amp;Store_Code=DINO&amp;Category_Code=SSL" target="new"><img src="images/thawte.gif" alt="Thawte Partner Logo" border="0"></a>
 						<br><br><a href="payment.php"><img src="images/verisign.jpg" alt="Verisign Partner Logo" border="0"></a>
@@ -188,7 +188,7 @@ function describeFeature(imagjpg) {
 </tbody></table>
 <br>
 <center>
-  <span class="nav"><a href="http://www.hostasaurus.com/">Copyright 2000-2003 Hostasaurus, Inc.</a><br>Your IP is: 209.237.238.173</span> 
+  <span class="nav"><a href="http://www.hostasaurus.com/">Copyright 2000-2004 Hostasaurus, Inc.</a><br>Your IP is: 209.237.238.179</span> 
   <p>
 
 </p></center>
