--- a/t/th/thi/thinkwave.com.html
+++ b/t/th/thi/thinkwave.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thinkwave.com privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610174215id_/http%3A//thinkwave.com/aprivacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thinkwave.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204163620id_/http%3A//www.thinkwave.com/aprivacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>ThinkWave: Privacy</title>
