--- a/g/go/god/godandscience.org.html
+++ b/g/go/god/godandscience.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the godandscience.org privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607060038id_/http%3A//www.godandscience.org/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the godandscience.org privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204163755id_/http%3A//www.godandscience.org/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Statement for Evidence for God from Science</title>
@@ -10,36 +10,18 @@
 <meta name="Author" content="Richard Deem">
 <meta http-equiv="Content-Type" content="text/html;CHARSET=iso-8859-1">
 <link rel="stylesheet" href="main.css" type="text/css">
+<link rel="stylesheet" href="print.css" type="text/css" media="print">
 <script language="JavaScript"> function addNetscapePanel() { if ((typeof window.sidebar == "object") && (typeof window.sidebar.addPanel == "function")) { window.sidebar.addPanel ("GodAndScience.org", "http://www.GodAndscience.org/ns6side.html",""); } else { var rv = window.confirm ("This page is enhanced for use with Netscape 6/7. " + "Would you like to download Netscape?"); if (rv) document.location.href = "http://home.netscape.com/download/index.html"; } } //--> </script> 
-<script src="/x.js" type="text/javascript"></script>
-<script type="text/javascript">
-function adjustLayout()
-{
-  var cHeight = xHeight("contentcontent");
-  var lHeight = xHeight("leftcontent");
-  var rHeight = xHeight("rightcontent");
-  var maxHeight =  Math.max(cHeight, Math.max(lHeight, rHeight));
-  xHeight("content", maxHeight);
-  xHeight("left", maxHeight);
-  xHeight("right", maxHeight);
-  xShow("footer");
-}
-window.onload = function()
-{
-  xAddEventListener(window, "resize",
-    adjustLayout, false);
-  adjustLayout();
-}
-</script> 
+ 
 </head>
 
 <body>
 
 
 <div id="header">
-<a href="/"><img border="0" src="/images/banner1.gif" width="468" height="60" align="bottom" style="margin-bottom: 0"></a>
-</div>
-<div id="content">
+<a href="/"><img border="0" src="/images/spacer.gif" width="468" height="60" align="bottom" style="margin-bottom: 0"></a>
+</div><div id="content">
+<div id="contentcontent">
 
 <h1>Privacy Statement for Evidence for God from Science</h1>
 <!-- "About Us" section of privacy policy -->
@@ -228,12 +210,14 @@ Preference information is collected.
 </tbody></table></center>
 <p><a href="javascript:history.go(-1)" onmouseover="window.status='back'; return true"><b>&lt;&lt;
 back</b></a></p>
+<p<font face="Arial,Helvetica,Sans-Serif" color="#000000">
 <p><font size="1" face="Arial,Helvetica,Sans-Serif"><script language="JavaScript" type="text/javascript">
 <!--
 document.write(document.location);
 // -->
-</script>https://web.archive.org/web/20040607060038id_/http%3A//www.godandscience.org/privacy.html
+</script>https://web.archive.org/web/20041204163755id_/http%3A//www.godandscience.org/privacy.html
 <br>Last Modified April 8, 2004</font></p>
+</p<font></div>
 </div>
 <div id="left">
 <div id="leftcontent">
@@ -289,13 +273,14 @@ document.write(document.location);
 </ul>
 </form>
 <ul>
+<li><a href="/print.html" target="_blank">Print<img border="0" src="/images/email.gif" alt="E-mail Page" align="middle" width="21" height="18"></a></li>
 <li><a href="javascript:addNetscapePanel();"><img border="0" src="/images/ns7.gif" alt="Add tab to Netscape 6/7" width="82" height="26"></a></li>
+<li><a href="/translate.shtml">Translate</a></li>
 <li><a href="/send.html">Email Page<img border="0" src="/images/email.gif" alt="E-mail Page" align="middle" width="21" height="18"></a></li>
 <li><a href="javascript:window.external.AddFavorite('http://www.godandscience.org','Evidence for God from Science')">Bookmark Us</a></li>
 </ul>
 </div>
-</div></div>
-<div id="right">
+</div></div><div id="right">
 <div id="rightcontent">
 <p class="menuHeading">Features</p>
 <div id="new">
@@ -317,31 +302,29 @@ document.write(document.location);
 <div id="new">
 <a href="/new.html" class="menuHeading">New Pages</a>
 <ul>
+<li><a href="/doctrine/marijuana.html">Okay for Christians to Use Marijuana?</a></li>
+<li><a href="/doctrine/nephilim.html">Who Were the Nephilim?</a></li>
+<li><a href="/apologetics/evil.html">Did God Create Evil?</a></li>
+<li><a href="/evolution/hobbit.html">Hobbit in Indonesia</a></li>
+<li><a href="/cults/jesuscreated.html">Was Jesus God's First Creation?</a></li>
+<li><a href="/apologetics/tree.html">Why a Tree of Knowledge of Good and Evil?</a></li>
+<li><a href="/apologetics/einstein.html">Did Albert Einstein Believe in a Personal God?</a></li>
+<li><a href="/doctrine/marriageinheaven.html">Will There be Marriage in Heaven?</a></li>
+<li><a href="/youngearth/death.html">No Death Before the Fall - A Young Earth Heresy</a></li>
+<li><a href="/slideshow/stemcell.html">Stem Cell Research/Cloning: Status and Ethics</a></li>
+<li><a href="/humor/rules.html">The Guys' Rules</a></li>
+<li><a href="/youngearth/dinoblood.html">Dinosaur Red Blood Cells Found in Fossils?</a></li>
+<li><a href="/apologetics/allreligions.html">All Religions Lead to God?</a></li>
 <li><a href="/doctrine/goingtoheaven.html">Going to Heaven Are We?</a></li>
-<li><a href="/apologetics/trinity.html">The Trinity Was Not Invented Until the Fourth Century?</a></li>
-<li><a href="/youngearth/speciation.html">Rapid Post-Flood Speciation- Creation or Evolution?</a></li>
-<li><a href="/apologetics/jesusdidntdie.html">Jesus Didn't Really Die on the Cross?</a></li>
-<li><a href="/doctrine/passionquestions.html">Guide to <i>The Passion of the Christ</i>- Questions and Answers</a></li>
-<li><a href="/doctrine/thepassion.html"><i>The Passion of the Christ</i>- a Review</a></li>
-<li><a href="/apologetics/rock.html">Can God Create a Rock He Can't Lift?</a></li>
-<li><a href="/youngearth/appearance.html">Appearance of Age - A Young Earth Heresy</a></li>
-<li><a href="/abortion/earlychristian.html">Abortion and the Early Christian Church</a></li>
-<li><a href="/apologetics/passion.html">Anti-Semitism in Mel Gibson's Movie <i>The Passion</i>?</a></li>
 </ul>
-</div><p>&nbsp;</p></div></div>
+</div>
+<p>&nbsp;</p></div></div>
 <div id="footer">
-
-<table align="right">
-  <tbody><tr>
-    <td><a href="#" onclick="setActiveStyleSheet('print'); return false;"><img border="0" src="/images/print.gif" width="29" height="42" alt="Set Page to Print"></a>
-      <a href="#" onclick="setActiveStyleSheet('standard'); return false;"><img border="0" src="/images/menu.gif" width="20" height="42" alt="Enable Menu"></a></td>
-  </tr>
-</tbody></table>
 <p align="center">&nbsp;<br><a href="/index.html">Home</a> | <a href="/apologetics/answers.html">Answers</a> | <a href="/evolution/index.html">Design</a>
 | <a href="/apologetics/creation.html">Creation</a> | <a href="/apologetics/authenticity.html">Bible</a>
 | <a href="/slideshows.html">Slideshows</a> | <a href="/doctrine/index.html">Theology</a>
 | <a href="/cults/index.html">Cults</a> | <a href="/doctrine/trib.html">Tribulation</a>
-| <a href="/doctrine/christianlife.html">Life&nbsp;Issues</a> | <a href="/discovery/index.html">Discovery</a>
+| <a href="/doctrine/christianlife.html">Life&nbsp;Issues</a> | <a href="/doctrine/politics.html">Politics</a> | <a href="/discovery/index.html">Discovery</a>
 | <a href="/love/index.html">God's&nbsp;Love</a> | <a href="/doctrine/abort.html">Abortion</a>
 | <a href="http://discussions.godandscience.org/">Discussion</a> | <a href="/links.html">Links</a>
 | <a href="/aboutus.html">About&nbsp;us</a> | <a href="/contact.html">Contact</a>
@@ -349,14 +332,5 @@ document.write(document.location);
 | <a href="/general/webmaster.html">Webmaster</a> | <a href="/personal/index.html">Personal</a>
 | <a href="/general/humor.html">Humor</a> | <a href="/search.html">Search</a>
 </p></div>
-
- <font face="Arial,Helvetica,Sans-Serif" color="#000000">
-
-</font>
-
-
-
-
-
 
 </body></html>
