--- a/m/ma/mar/marketamerica.com.html
+++ b/m/ma/mar/marketamerica.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the marketamerica.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602195741id_/http%3A//marketamerica.com/maIndex.cfm%3FmaAction%3Dprivacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the marketamerica.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204163905id_/http%3A//www.marketamerica.com/maIndex.cfm%3FmaAction%3Dprivacypolicy) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -54,7 +54,6 @@ function mmLoadMenus() {
    mm_menu_0319090040_1.bgColor='#555555';
   window.mm_menu_0411145218_2 = new Menu("root",109,12,"Arial, Helvetica, sans-serif",10,"#000000","#666666","#e1e1e1","#e1e1e1","left","middle",1,0,500,-5,7,true,false,true,0,true,true);
   mm_menu_0411145218_2.addMenuItem("Mall&nbsp;Without&nbsp;Walls&reg;","window.open('maIndex.cfm?maAction=mall', '_self');");
-  mm_menu_0411145218_2.addMenuItem("America's&nbsp;AuctionsTM","window.open('maIndex.cfm?maAction=Auctions', '_self');");
    mm_menu_0411145218_2.hideOnMouseOut=true;
    mm_menu_0411145218_2.menuBorder=0;
    mm_menu_0411145218_2.menuLiteBgColor='#ffffff';
@@ -113,31 +112,30 @@ function mmLoadMenus() {
    </div>
   </div>
 </div>
-<div id="menuLayer2" style="position: absolute; z-index: 1; left: -300px; top: -300px; visibility: hidden; color: rgb(85, 85, 85); width: 109px; height: 23px;">
-  <div id="menuLite2" style="position: absolute; z-index: 1; left: 0px; top: 0px; height: 23px; width: 109px;" onmouseout="mouseoutMenu();">
-	 <div id="menuFg2" style="position: absolute; left: 0px; top: 0px; height: 23px; width: 109px;">
+<div id="menuLayer2" style="position: absolute; z-index: 1; left: -300px; top: -300px; visibility: hidden; color: rgb(85, 85, 85); width: 109px; height: 11px;">
+  <div id="menuLite2" style="position: absolute; z-index: 1; left: 0px; top: 0px; height: 11px; width: 109px;" onmouseout="mouseoutMenu();">
+	 <div id="menuFg2" style="position: absolute; left: 0px; top: 0px; height: 11px; width: 109px;">
 <div id="menuItem12" style="position: absolute; left: 0px; top: 0px; font-family: Arial, Helvetica, sans-serif; font-size: 10px; width: 109px; height: 12px; background-color: rgb(225, 225, 225); visibility: inherit; cursor: pointer;"><div id="menuItemText12" style="position:absolute;left:2px;top:0px;color:#000000;">Mall&nbsp;Without&nbsp;Walls®&nbsp;</div>
-<div id="menuItemHilite12" style="position:absolute;left:2px;top:0px;color:#666666;visibility:hidden;">Mall&nbsp;Without&nbsp;Walls®&nbsp;</div></div><div id="menuItem13" style="position: absolute; left: 0px; top: 12px; font-family: Arial, Helvetica, sans-serif; font-size: 10px; width: 109px; height: 12px; background-color: rgb(225, 225, 225); visibility: inherit; cursor: pointer;"><div id="menuItemText13" style="position:absolute;left:2px;top:0px;color:#000000;">America's&nbsp;AuctionsTM&nbsp;</div>
-<div id="menuItemHilite13" style="position:absolute;left:2px;top:0px;color:#666666;visibility:hidden;">America's&nbsp;AuctionsTM&nbsp;</div></div>	  <div id="focusItem2" style="position: absolute; left: 0px; top: -30px;" onclick="onMenuItemAction(null,this);">&nbsp;</div>
+<div id="menuItemHilite12" style="position:absolute;left:2px;top:0px;color:#666666;visibility:hidden;">Mall&nbsp;Without&nbsp;Walls®&nbsp;</div></div>	  <div id="focusItem2" style="position: absolute; left: 0px; top: -30px;" onclick="onMenuItemAction(null,this);">&nbsp;</div>
    </div>
   </div>
 </div>
 <div id="menuLayer3" style="position: absolute; z-index: 1; left: -300px; top: -300px; visibility: hidden; color: rgb(85, 85, 85); width: 80px; height: 27px;">
   <div id="menuLite3" style="position: absolute; z-index: 1; left: 0px; top: 0px; height: 27px; width: 80px;" onmouseout="mouseoutMenu();">
 	 <div id="menuFg3" style="position: absolute; left: 0px; top: 0px; height: 27px; width: 80px;">
-<div id="menuItem14" style="position: absolute; left: 0px; top: 0px; font-family: Arial, Helvetica, sans-serif; font-size: 10px; width: 80px; height: 14px; background-color: rgb(225, 225, 225); visibility: inherit; cursor: pointer;"><div id="menuItemText14" style="position:absolute;left:3px;top:1px;color:#000000;">Press&nbsp;Releases&nbsp;</div>
-<div id="menuItemHilite14" style="position:absolute;left:3px;top:1px;color:#666666;visibility:hidden;">Press&nbsp;Releases&nbsp;</div></div><div id="menuItem15" style="position: absolute; left: 0px; top: 14px; font-family: Arial, Helvetica, sans-serif; font-size: 10px; width: 80px; height: 14px; background-color: rgb(225, 225, 225); visibility: inherit; cursor: pointer;"><div id="menuItemText15" style="position:absolute;left:3px;top:1px;color:#000000;">Media&nbsp;Inquiries&nbsp;</div>
-<div id="menuItemHilite15" style="position:absolute;left:3px;top:1px;color:#666666;visibility:hidden;">Media&nbsp;Inquiries&nbsp;</div></div>	  <div id="focusItem3" style="position: absolute; left: 0px; top: -30px;" onclick="onMenuItemAction(null,this);">&nbsp;</div>
+<div id="menuItem13" style="position: absolute; left: 0px; top: 0px; font-family: Arial, Helvetica, sans-serif; font-size: 10px; width: 80px; height: 14px; background-color: rgb(225, 225, 225); visibility: inherit; cursor: pointer;"><div id="menuItemText13" style="position:absolute;left:3px;top:1px;color:#000000;">Press&nbsp;Releases&nbsp;</div>
+<div id="menuItemHilite13" style="position:absolute;left:3px;top:1px;color:#666666;visibility:hidden;">Press&nbsp;Releases&nbsp;</div></div><div id="menuItem14" style="position: absolute; left: 0px; top: 14px; font-family: Arial, Helvetica, sans-serif; font-size: 10px; width: 80px; height: 14px; background-color: rgb(225, 225, 225); visibility: inherit; cursor: pointer;"><div id="menuItemText14" style="position:absolute;left:3px;top:1px;color:#000000;">Media&nbsp;Inquiries&nbsp;</div>
+<div id="menuItemHilite14" style="position:absolute;left:3px;top:1px;color:#666666;visibility:hidden;">Media&nbsp;Inquiries&nbsp;</div></div>	  <div id="focusItem3" style="position: absolute; left: 0px; top: -30px;" onclick="onMenuItemAction(null,this);">&nbsp;</div>
    </div>
   </div>
 </div>
 <div id="menuLayer4" style="position: absolute; z-index: 1; left: -300px; top: -300px; visibility: hidden; color: rgb(85, 85, 85); width: 48px; height: 41px;">
   <div id="menuLite4" style="position: absolute; z-index: 1; left: 0px; top: 0px; height: 41px; width: 48px;" onmouseout="mouseoutMenu();">
 	 <div id="menuFg4" style="position: absolute; left: 0px; top: 0px; height: 41px; width: 48px;">
-<div id="menuItem16" style="position: absolute; left: 0px; top: 0px; font-family: Arial, Helvetica, sans-serif; font-size: 10px; width: 48px; height: 14px; background-color: rgb(225, 225, 225); visibility: inherit; cursor: pointer;"><div id="menuItemText16" style="position:absolute;left:3px;top:1px;color:#000000;">US&nbsp;</div>
-<div id="menuItemHilite16" style="position:absolute;left:3px;top:1px;color:#666666;visibility:hidden;">US&nbsp;</div></div><div id="menuItem17" style="position: absolute; left: 0px; top: 14px; font-family: Arial, Helvetica, sans-serif; font-size: 10px; width: 48px; height: 14px; background-color: rgb(225, 225, 225); visibility: inherit; cursor: pointer;"><div id="menuItemText17" style="position:absolute;left:3px;top:1px;color:#000000;">Canada&nbsp;</div>
-<div id="menuItemHilite17" style="position:absolute;left:3px;top:1px;color:#666666;visibility:hidden;">Canada&nbsp;</div></div><div id="menuItem18" style="position: absolute; left: 0px; top: 28px; font-family: Arial, Helvetica, sans-serif; font-size: 10px; width: 48px; height: 14px; background-color: rgb(225, 225, 225); visibility: inherit; cursor: pointer;"><div id="menuItemText18" style="position:absolute;left:3px;top:1px;color:#000000;">Australia&nbsp;</div>
-<div id="menuItemHilite18" style="position:absolute;left:3px;top:1px;color:#666666;visibility:hidden;">Australia&nbsp;</div></div>	  <div id="focusItem4" style="position: absolute; left: 0px; top: -30px;" onclick="onMenuItemAction(null,this);">&nbsp;</div>
+<div id="menuItem15" style="position: absolute; left: 0px; top: 0px; font-family: Arial, Helvetica, sans-serif; font-size: 10px; width: 48px; height: 14px; background-color: rgb(225, 225, 225); visibility: inherit; cursor: pointer;"><div id="menuItemText15" style="position:absolute;left:3px;top:1px;color:#000000;">US&nbsp;</div>
+<div id="menuItemHilite15" style="position:absolute;left:3px;top:1px;color:#666666;visibility:hidden;">US&nbsp;</div></div><div id="menuItem16" style="position: absolute; left: 0px; top: 14px; font-family: Arial, Helvetica, sans-serif; font-size: 10px; width: 48px; height: 14px; background-color: rgb(225, 225, 225); visibility: inherit; cursor: pointer;"><div id="menuItemText16" style="position:absolute;left:3px;top:1px;color:#000000;">Canada&nbsp;</div>
+<div id="menuItemHilite16" style="position:absolute;left:3px;top:1px;color:#666666;visibility:hidden;">Canada&nbsp;</div></div><div id="menuItem17" style="position: absolute; left: 0px; top: 28px; font-family: Arial, Helvetica, sans-serif; font-size: 10px; width: 48px; height: 14px; background-color: rgb(225, 225, 225); visibility: inherit; cursor: pointer;"><div id="menuItemText17" style="position:absolute;left:3px;top:1px;color:#000000;">Australia&nbsp;</div>
+<div id="menuItemHilite17" style="position:absolute;left:3px;top:1px;color:#666666;visibility:hidden;">Australia&nbsp;</div></div>	  <div id="focusItem4" style="position: absolute; left: 0px; top: -30px;" onclick="onMenuItemAction(null,this);">&nbsp;</div>
    </div>
   </div>
 </div>
@@ -188,6 +186,7 @@ function mmLoadMenus() {
 	
   <tr>
     <td width="725">
+	
 	
 	
 	
@@ -326,17 +325,17 @@ function openWindow(url,winHeight) {
 
 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="725" id="AutoNumber2">
       <tbody><tr>
-        <td width="725" bgcolor="#788ED0" height="2">
+        <td width="725" bgcolor="#788ED0" height="4">
         <img border="0" src="images/spacer.gif" width="1" height="1"></td>
       </tr>
       <tr>
-        <td width="725" height="48" bgcolor="#A0ADE3">
+        <td width="725" height="48" bgcolor="A0ADE3">
         <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="725" id="AutoNumber5" height="48">
           <tbody><tr>
             <td width="15">
             <img border="0" src="images/spacer.gif" width="1" height="1"></td>
             <td>
-            <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" id="AutoNumber6" width="189">
+            <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" id="AutoNumber6" width="384">
               <tbody><tr>
                 <td width="53"><a href="maIndex.cfm?maAction=globalNA">
                 <img border="0" src="images/americaFlag.jpg" width="52" height="31"></a></td>
@@ -353,6 +352,8 @@ function openWindow(url,winHeight) {
 				
 				<a href="maIndex.cfm?maAction=globalAustralia">
                 <img border="0" src="images/australiaFlag.jpg" width="53" height="31"></a></td>
+<td rowspan="4" width="20" align="left">&nbsp;</td>
+<td rowspan="4" align="left">&nbsp;</td>
               </tr>
               <tr>
 				  <td colspan="5" height="4"><img border="0" src="images/spacer.gif" width="1" height="1"></td>
@@ -363,31 +364,22 @@ function openWindow(url,winHeight) {
 					  <font face="arial" size="1">AOL users click here</font></a>
 				  </td>
 			  </tr>
+			  <tr>
+				  <td colspan="5" align="center" height="15"><img border="0" src="images/spacer.gif" width="1" height="1"></td>
+			  </tr>
             </tbody></table>
             </td>
-            <td>&nbsp;</td>
-            <td width="215">
-        <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" id="AutoNumber7" height="48" width="310">
-          <tbody><tr>
-            <td colspan="3" width="310">&nbsp;</td>
-          </tr>
-          <tr>
-            <td align="right">
-			<a href="#.html" onclick="window.open('http://www.dsa.org/ethics/', 'myWin', 'width=705,height=500,resizable=yes,toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=yes')">
-			
-			<font face="Arial" size="1" color="#FFFFFF">Please 
-			click here for the DSA CODE of ETHICS,<br>to which we adhere.</font></a></td>
-            <td width="7" align="right">&nbsp;</td>
-            <td width="49">
-			<a href="#.html" onclick="javascript:openWindow('includes/dsa_information.html',400);">
-            <img border="0" src="images/dsaLogo.gif" width="38" height="40"></a></td>
-          </tr>
-          <tr>
-            <td colspan="2" height="7" width="261">
-            <img border="0" src="images/spacer.gif" width="1" height="1"></td>
-          </tr>
+            <td width="10">&nbsp;</td>
+            <td width="215" align="right">
+<table border="0" width="215" id="table1" cellspacing="0" cellpadding="0">
+	<tbody><tr>
+		<td align="right">
+<a href="http://www.marketamerica.com/includes/newsDetail.cfm?id=391" target="_blank">
+<img src="images/OlympicLOGO.gif" border="0"></a></td>
+		<td width="13">&nbsp;</td>
+	</tr>
 </tbody></table>
-            </td>
+			</td>
           </tr>
         </tbody></table>
         </td>
@@ -433,11 +425,12 @@ function openWindow(url,winHeight) {
             <img border="0" src="images/spacer.gif" width="1" height="1"></td>
           </tr>
         </tbody></table>
-
       </td>
     </tr>
  	  
 </tbody></table>
+
+
 
 
 </td></tr></tbody></table></div></body></html>
