--- a/b/bo/boi/boingo.com.html
+++ b/b/bo/boi/boingo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the boingo.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603185804id_/http%3A//www.boingo.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the boingo.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204164045id_/http%3A//boingo.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head><script src="/__utm.js"></script>
 
@@ -15,7 +15,7 @@
 <body link="#0078b8" marginheight="0" marginwidth="0" topmargin="0" leftmargin="0">
 <table align="center" width="100%" cellspacing="0" height="43" cellpadding="0" border="0" background="img/nav_top.gif">
 <tbody><tr>
-<td width="12%">&nbsp;</td><td valign="top" width="28%"><a href="index.html"><img border="0" height="43" width="144" src="img/nav-img/boingo_header_logo.gif"></a></td><td width="8%">&nbsp;</td><td valign="top" width="40%">
+<td width="12%">&nbsp;</td><td valign="top" width="28%"><a href="/"><img border="0" height="43" width="144" src="img/nav-img/boingo_header_logo.gif"></a></td><td width="8%">&nbsp;</td><td valign="top" width="40%">
 <table border="0" cellpadding="0" cellspacing="0" height="27" width="415">
 <tbody><tr>
 <td nowrap="nowrap" align="center" valign="middle" background="img/nav-img/bg_topnavbar_grey-a.gif"><a id="nav" href="/cgi-bin/redirect.cgi?u=https://signup.boingo.com/selfcare/reg/start.do&amp;ck=SCC&amp;op=r&amp;qs=1">Sign&nbsp;Up</a></td><td valign="top"><img height="27" src="img/nav-img/bg_topnavbar_div-a.gif"></td><td nowrap="nowrap" align="center" valign="middle" background="img/nav-img/bg_topnavbar_grey-a.gif"><a id="nav" href="download.html">Download</a></td><td valign="top"><img height="27" src="img/nav-img/bg_topnavbar_div-a.gif"></td><td nowrap="nowrap" align="center" valign="middle" background="img/nav-img/bg_topnavbar_grey-a.gif"><a id="nav" href="search.html">Locations</a></td><td valign="top"><img height="27" src="img/nav-img/bg_topnavbar_div-a.gif"></td><td nowrap="nowrap" align="center" valign="middle" background="img/nav-img/bg_topnavbar_grey-a.gif"><a id="nav" href="servicecenter.html">Support</a></td><td valign="top"><img height="27" src="img/nav-img/bg_topnavbar_div-a.gif"></td><td nowrap="nowrap" align="center" valign="middle" background="img/nav-img/bg_topnavbar_grey-a.gif"><a id="nav" href="https://my.boingo.com">My&nbsp;Account</a></td><td valign="top"><img height="27" src="img/nav-img/bg_topnavbar_div-a.gif"></td>
@@ -25,7 +25,7 @@
 </tr>
 </tbody></table>
 <div id="breadcrumbs">
-<a href="index.html">Home</a><img hspace="5" height="5" width="7" src="img/nav-img/img_arrow.gif">Privacy Policy</div>
+<a href="/">Home</a><img hspace="5" height="5" width="7" src="img/nav-img/img_arrow.gif">Privacy Policy</div>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr height="30">
 <td colspan="5" height="30"></td>
@@ -33,13 +33,13 @@
 <tr>
 <td width="150"></td><td valign="top" width="75%"><img src="img/hdln-privacypolicy.gif"><br>
 <br>
-<strong class="copyHeader" style="text-transform: uppercase;">Boingo Wireless™, Inc. Privacy Policy</strong>
+<strong class="copyHeader" style="text-transform: uppercase;">Boingo Wireless<sup>®</sup>, Inc. Privacy Policy</strong>
 <br>
 <br>
 <span class="copy">
 			
 			<span class="copy">
-			The privacy and security of your personal information is a foremost consideration of Boingo Wireless, Inc. We want to make your experience using the Boingo™ service as enjoyable and rewarding 
+			The privacy and security of your personal information is a foremost consideration of Boingo Wireless, Inc. We want to make your experience using the Boingo<sup>®</sup> service as enjoyable and rewarding 
 			as possible while allowing you to feel secure that your privacy interests are being respected. 
 			</span>
 			
@@ -352,15 +352,41 @@
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
 <td width="150"></td><td id="btmnav" valign="top" width="52%" nowrap=""><a href="aboutus.html">About Us</a>&nbsp;&nbsp;
-				<a href="affiliates/index.html">Affiliates</a>&nbsp;&nbsp;<a href="termsofuse.html">Terms of Use</a>&nbsp;&nbsp;
+				<a href="/affiliates/">Affiliates</a>&nbsp;&nbsp;<a href="termsofuse.html">Terms of Use</a>&nbsp;&nbsp;
 				<a style="text-decoration: none;" href="privacy.html">Privacy Policy</a>&nbsp;&nbsp;
 				<a href="careers.html">Careers</a>&nbsp;&nbsp;
-				<a href="partner/index.html">Partner with Boingo</a>&nbsp;&nbsp;
+				<a href="/partner/">Partner with Boingo</a>&nbsp;&nbsp;
 				<br>
 					©2001-2004 Boingo Wireless, Inc. All rights reserved.</td><td width="5"></td><td id="btmrt" valign="top" width="300">Customer Care: 800-880-4117</td><td width="150"></td>
 </tr>
 </tbody></table>
 <br>
+<!-- ClickTrax web tools statistics hit counter code -->
+<script language="javascript" type="text/javascript">
+var data,nhp,ntz,rf,sr;document.cookie='__support_check=1';nhp='http';
+rf=document.referrer;sr=document.location.search;
+if(top.document.location==document.referrer
+|| (document.referrer == '' && top.document.location != ''))
+{rf=top.document.referrer;sr=top.document.location.search}
+ntz=new Date();if(location.href.substr(0,6).toLowerCase()=='https:')
+nhp='https';data='&an='+escape(navigator.appName)+ 
+'&ck='+document.cookie.length+
+'&rf='+escape(rf)+ '&sl='+escape(navigator.systemLanguage)+
+'&av='+escape(navigator.appVersion)+ '&l='+escape(navigator.language)+
+'&pf='+escape(navigator.platform)+ '&pg='+escape(location.pathname);
+if(navigator.appVersion.substring(0,1)>'3') {data=data+'&cd='+
+screen.colorDepth+'&rs='+escape(screen.width+ ' x '+screen.height)+
+'&tz='+ntz.getTimezoneOffset()+'&je='+ navigator.javaEnabled()};
+document.write('<img border=0 hspace=0 '+
+ 'vspace=0 width=1 height=1 src="'+nhp+'://loc1.hitsprocessor.com/'+
+ 'statistics.asp?v=1&s=25&pl=1&acct=boingo'+data+'">');
+ </script><img border="0" hspace="0" vspace="0" width="1" height="1" src="https://loc1.hitsprocessor.com/statistics.asp?v=1&amp;s=25&amp;pl=1&amp;acct=boingo&amp;an=Netscape&amp;ck=17&amp;rf=&amp;sl=undefined&amp;av=5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;l=en-US&amp;pf=Linux%20x86_64&amp;pg=/web/20041204164045id_/http%253A//boingo.com/privacy.html&amp;cd=24&amp;rs=800%20x%20600&amp;tz=0&amp;je=false">
+
+<noscript>
+<img border=0 hspace=0 vspace=0 width=1 height=1 alt="" 
+src="http://loc1.hitsprocessor.com/stats-ns.asp?acct=boingo&amp;v=1&pl=1&amp;s=25">
+</noscript>
+<!-- End ClickTrax statistics web tools hit counter code -->
 
 
 </body></html>
