stormingmedia.us (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;newsandmedia",
  "char_count": 3190,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.64,
  "homepage_snapshot_redirected_domain": "stormingmedia.us",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040920154619id_/http://www.stormingmedia.us/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040920154619id_/http%3A//stormingmedia.us",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "stormingmedia.us",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204165201id_/http%3A//www.stormingmedia.us/privacy.html",
  "policy_title": "Storming Media - Privacy Policy",
  "policy_url": "stormingmedia.us/privacy.html",
  "sha1": "b5ccfcaa9a00ff6a4397a42dc8a9f180f2b32a16",
  "simhash": 17822146750790863775,
  "simhash_updated": false,
  "site_hostname": "stormingmedia.us",
  "site_url": "http://stormingmedia.us",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041204165201",
  "word_count": 490,
  "year": 2004
}

--- a/s/st/sto/stormingmedia.us.html
+++ b/s/st/sto/stormingmedia.us.html
@@ -1,166 +1,18 @@
-<!--The following is the downloaded HTML source of the stormingmedia.us privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605200436id_/http%3A//www.stormingmedia.us/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stormingmedia.us privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204165201id_/http%3A//www.stormingmedia.us/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Storming Media - Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"> 
 <meta name="description" content="Privacy Policy">
 <meta name="keywords" content="[keywords]">
-<meta name="revisit-after" content="2 days">
+<meta name="revisit-after" content="30 days">
 <meta name="title" content="Storming Media - Privacy Policy">
 <meta name="author" content="Storming Media">
 <meta http-equiv="content-language" content="en-US">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<style type="text/css">
-<!-- 
-	span.search{
-		color:black;
-		background-color:#ffff66
-	}
-	span.bt {
-    Font-family: Verdana, Arial, Helvetica, sans-serif;
-		Font-weight: Bold;
-		Font-size: 10px;
-	}
-	span.t1 {
-    Font-family: Verdana, Arial, Helvetica, sans-serif;
-		Font-size: 10px;
-	}
-	span.t1red {
-    Font-family: Verdana, Arial, Helvetica, sans-serif;
-		Font-size: 10px;
-		Color: red;
-	}
-  span.t2 {
-    Font-family: Arial, Helvetica, sans-serif;
-		Font-size: 13px;
-	}
-  span.bt2blue {
-    Font-family: Arial, Helvetica, sans-serif;
-		Font-size: 13px;
-		Font-weight: Bold;
-		Color: #003366;
-	}
-	span.wt1 {
-    Font-family: Verdana, Arial, Helvetica, sans-serif;
-		Font-size: 11px;
-		Color: #ffffff;
-	}
-	span.wt2 {
-    Font-family: Verdana, Arial, Helvetica, sans-serif;
-		Font-size: 13px;
-		Color: #ffffff;
-	}
-	span.bwt {
-    Font-family: Verdana, Arial, Helvetica, sans-serif;
-		Font-size: 10px;
-		Font-weight: Bold;
-		Color: #ffffff;
-	}
-	span.t2b {
-    Font-family: Arial, Helvetica, sans-serif;
-		Font-size: 13px;
-		Font-weight: Bold;
-	}
-	span.t2i {
-    Font-family: Arial, Helvetica, sans-serif;
-		Font-size: 13px;
-		Font-weight: Italic;
-	}
-	span.t3b {
-    Font-family: Arial, Helvetica, sans-serif;
-		Font-size: 14px;
-		Font-weight: Bold;
-	}
-
-	h1 {
-    Font-family: Verdana, Arial, Helvetica, sans-serif;
-		Font-size: 16px;
-		Font-weight: Bold;
-	}
-	h1.title {
-    Font-family: Arial, Helvetica, sans-serif;
-		Font-size: 13px;
-		Font-weight: Bold;
-	}
-	h2 {
-    Font-family: Arial, Helvetica, sans-serif;
-		Font-size: 14px;
-		Font-weight: Bold;
-	}
-	h1.blue {
-    Font-family: Arial, Helvetica, sans-serif;
-		Font-size: 13px;
-		Font-weight: Bold;
-		Color: #003366;
-	}
-	h2.blue {
-    Font-family: Arial, Helvetica, sans-serif;
-		Font-size: 12px;
-		Font-weight: Bold;
-		Color: #003366;
-	}
-	a.blue:link {
-		Color: #003366;
-		Text-decoration: none;
-	}
-	a.blue:visited {
-		Color: #003366;
-		Text-decoration: none;
-	}
-	a.blue:active {
-		Color: #003366;
-		Text-decoration: none;
-	}
-
-	a.wu:link {
-		Color: #ffffff;
-		Text-decoration: underline;
-	}
-	a.wu:visited {
-		Color: #dddddd;
-		Text-decoration: underline;
-	}
-	a.wu:active {
-		Color: #dddddd;
-		Text-decoration: underline;
-	}
--->
-</style>
-<script language="JavaScript">
-<!--
-var u;
-var d;
-var s;
-var w;
-function javascriptemail(u, d, s, w){
-  document.write('<a h' + 'ref="' + 'mailto:' + u + '@' + d + '.' + s + '">' + w + '</a>');
-}
-function sIR() { 
-  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
-}
-
-function pI() { 
-  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
-    var i,j=d.MM_p.length,a=pI.arguments; for(i=0; i<a.length; i++)
-    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
-}
-
-function fO(n, d) { 
-  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
-    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
-  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
-  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=fO(n,d.layers[i].document);
-  if(!x && document.getElementById) x=document.getElementById(n); return x;
-}
-
-function sI() { 
-  var i,j=0,x,a=sI.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
-   if ((x=fO(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
-}
-<!-- JAVASCRIPT -->
-//-->
-</script>
+<link href="http://www.stormingmedia.us/smstyle.css" title="compact" rel="stylesheet" type="text/css">
+<script language="JavaScript" src="http://www.stormingmedia.us/smjavascript.js"></script>
 </head>
 <body text="#000000" vlink="#003063" alink="#003063" link="#003063" bgcolor="#003063" leftmargin="0" topmargin="0" onload="pI('../../images/nav-homeOVR.gif','../../images/nav-aboutusOVR.gif','../../images/nav-contactusOVR.gif','../../images/nav-viewcartOVR.gif','../../images/nav-advancedsearchOVR.gif','../../images/nav-customerservOVR.gif')" marginheight="0" marginwidth="0">
 <table cellspacing="0" cellpadding="0" width="100%" border="0">
@@ -263,6 +115,8 @@ If you would like to learn more about safe surfing from the US Federal Trade Com
 		            </tr>
 		          </tbody>
 		          </table>
+<!-- BOTTOMAD -->
+
 		        </td>
 		      </tr>
 		    </tbody>
