--- a/h/ho/hob/hobowars.com.html
+++ b/h/ho/hob/hobowars.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the hobowars.com privacy policy that was archived on 2004-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040609083116id_/http%3A//www.hobowars.com/index.php%3Fcmd%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hobowars.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204171648id_/http%3A//www.hobowars.com/index.php%3Fcmd%3Dprivacy) for the most accurate reproduction.-->
 
 <html><head>
-<title>HoboWars.com - The best free online game!</title>
+<title>HoboWars - The best free online game!</title>
 <style>
 FONT {FONT-FAMILY: Verdana}
 A {TEXT-DECORATION: none}
@@ -24,7 +24,7 @@ TEXTAREA {FONT-SIZE: 8pt; FONT-FAMILY: Verdana}
     </td>
   </tr>
   <tr> 
-    <td> <br>
+    <td valign="top"><br>
 <table width="98%" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td>
@@ -49,11 +49,7 @@ HBW cannot be held responsible for any information you choose to disclose, via o
 
 </td>
   </tr>
-</tbody></table><table border="0" cellspacing="0" cellpadding="0" height="100%">
-        <tbody><tr> 
-          <td>&nbsp;</td>
-        </tr>
-      </tbody></table>
+</tbody></table>
       <br>
     </td>
   </tr>
@@ -63,7 +59,7 @@ HBW cannot be held responsible for any information you choose to disclose, via o
         <font color="#666666">[ </font><font color="#666666"><a href="index.php?cmd=privacy" style="color: #666666">Privacy 
         Policy</a> | <a href="index.php?cmd=tos" style="color: #666666">Terms of Service</a> | <a href="index.php?cmd=contact" style="color: #666666">Contact</a> 
         ]<br>
-        © <a href="http://www.hobowars.com" style="color: #666666" title="The best free online game!">HoboWars.com</a> 2003-2004. All Rights Reserved. </font> 
+        © 2003-2004 <a href="http://www.gaminglive.net" style="color: #666666">GamingLive Network</a>. All Rights Reserved. [Frontend]</font> 
       </center>
     </td>
   </tr>
