--- a/t/to/tow/towerdata.com.html
+++ b/t/to/tow/towerdata.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the towerdata.com privacy policy that was archived on 2004-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040613190408id_/http%3A//towerdata.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the towerdata.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204172415id_/http%3A//www.towerdata.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Find, Verify, &amp; Correct Email Addresses</title>
