--- a/s/sc/sci/sciencelab.com.html
+++ b/s/sc/sci/sciencelab.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sciencelab.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603191237id_/http%3A//www.sciencelab.com/data/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sciencelab.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204172627id_/http%3A//www.sciencelab.com/data/privacy-policy.htm) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -848,7 +848,7 @@ contact us by e-mail at <b><a href="mailto:privacy@sciencelab.com"><font color="
                 <a href="http://www.sciencelab.com/page/S/CTGY/21755" class="SSX">OSHA Lab
                 Standards</a></td>
 
-              <td valign="top"><a href="http://www.sciencelab.com/data/help.htm" class="SSX">View our shipping rates</a><br>
+              <td valign="top"><a href="http://www.sciencelab.com/data/order-track.htm" class="SSX">Order Tracking</a><br>
                 <a href="http://www.sciencelab.com/data/help.htm" class="SSX">Return a product</a></td>
 
               <td valign="top"><p><a href="http://www.sciencelab.com/data/privacy-policy.htm" class="SSX">Privacy Policy</a><br>
