--- a/p/pa/pas/passkey.com.html
+++ b/p/pa/pas/passkey.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the passkey.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604232049id_/http%3A//www.passkey.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the passkey.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204173114id_/http%3A//www.passkey.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>Passkey Website Privacy Statement</title>
@@ -73,7 +73,7 @@ function wtl_Tag5_131829()
 
 wtl_Tag5_131829();
 //-->
-</script><img id="WTL_131829" border="0" width="1" height="1" src="https://statse.webtrendslive.com/S131829/button5.asp?tagver=5&amp;si=131829&amp;fw=1&amp;server=&amp;Group=&amp;tz=0&amp;ch=20&amp;cl=K2JKqXA&amp;ti=Passkey%20Website%20Privacy%20Statement&amp;url=https%3A//web.archive.org/web/20040604232049id_/http%253A//www.passkey.com/privacy.shtml&amp;rf=&amp;js=Yes&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No">
+</script><img id="WTL_131829" border="0" width="1" height="1" src="https://statse.webtrendslive.com/S131829/button5.asp?tagver=5&amp;si=131829&amp;fw=1&amp;server=&amp;Group=&amp;tz=0&amp;ch=20&amp;cl=K2JKqWA&amp;ti=Passkey%20Website%20Privacy%20Statement&amp;url=https%3A//web.archive.org/web/20041204173114id_/http%253A//www.passkey.com/privacy.shtml&amp;rf=&amp;js=Yes&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No">
 <noscript>
 <IMG BORDER="0" WIDTH="1" HEIGHT="1" SRC="http://statse.webtrendslive.com/S131829/button5.asp?tagver=5&si=131829&fw=1&js=No&">
 </noscript>
@@ -87,7 +87,7 @@ wtl_Tag5_131829();
     <td colspan="2" style="padding: 2px;" height="25"> 
       <div class="date"> 
         
-        Friday, June 04, 2004
+        Saturday, December 04, 2004
         &nbsp;</div>
     </td>
   </tr>
