coolrom.com (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "entertainment;games;informationtech",
  "char_count": 1363,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.89,
  "homepage_snapshot_redirected_domain": "coolrom.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929084413id_/http://www.coolrom.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929084413id_/http%3A//coolrom.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "coolrom.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204173743id_/http%3A//www.coolrom.com/privacy.php",
  "policy_title": "CoolROM - Privacy Policy",
  "policy_url": "coolrom.com/privacy.php",
  "sha1": "73e4bef3cbfdb8c4e277c02d3bfa782df63f59c9",
  "simhash": 15889084246705758984,
  "simhash_updated": false,
  "site_hostname": "coolrom.com",
  "site_url": "http://coolrom.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041204173743",
  "word_count": 221,
  "year": 2004
}

--- a/c/co/coo/coolrom.com.html
+++ b/c/co/coo/coolrom.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the coolrom.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605215107id_/http%3A//www.coolrom.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the coolrom.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204173743id_/http%3A//www.coolrom.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>CoolROM - Privacy Policy</title>
@@ -28,17 +28,14 @@
    phpAds_random = new String (Math.random()); phpAds_random = phpAds_random.substring(2,11);
    
    document.write ("<" + "script language='JavaScript' type='text/javascript' src='");
-   document.write ("http://www.echangnet.com/phpAdsNew/adjs.php?n=" + phpAds_random);
-   document.write ("&amp;what=zone:1&amp;target=blank");
+   document.write ("http://ad.echangnet.com/adjs.php?n=" + phpAds_random);
+   document.write ("&amp;what=zone:3&amp;target=blank");
    document.write ("&amp;exclude=" + document.phpAds_used);
    if (document.referer)
       document.write ("&amp;referer=" + escape(document.referer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://www.echangnet.com/phpAdsNew/adjs.php?n=355014002&amp;what=zone:1&amp;target=blank&amp;exclude=,"></script><noscript><a href='http://www.echangnet.com/phpAdsNew/adclick.php?n=aeb1708a' target='blank'><img src='http://www.echangnet.com/phpAdsNew/adview.php?what=zone:1&amp;n=aeb1708a' border='0' alt=''></a></noscript>
-
-<br><br>
-
+</script><script language="JavaScript" type="text/javascript" src="http://ad.echangnet.com/adjs.php?n=692416876&amp;what=zone:3&amp;target=blank&amp;exclude=,"></script><noscript><a href='http://ad.echangnet.com/adclick.php?n=ab91f5da' target='blank'><img src='http://ad.echangnet.com/adview.php?what=zone:3&amp;n=ab91f5da' border='0' alt=''></a></noscript><br><br>
 <table width="740" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr bgcolor="#388FFF"><td align="center">
 
@@ -61,7 +58,7 @@
 » <a href="http://www.coolrom.com/advertise.php" class="nav">Advertise</a><br>
 » <a href="http://www.coolrom.com/affiliate.php" class="nav">Affiliate</a><br>
 » <a href="http://www.buyvg.com/" class="nav" target="_blank">Store</a><br>
-» <a href="http://www.coolrom.com/gigex/downloads.php" class="nav">Free Downloads</a><br>
+» <a href="http://www.coolrom.com/gamedaily/downloads.php" class="nav">Free Downloads</a><br>
 » <a href="http://www.coolrom.com/contact.php" class="nav">Contact Us</a><br>
 
 <br><br>
@@ -80,7 +77,16 @@
 » <a href="http://www.top-www.com/cgi/gaming/topsites.cgi?coolrom" target="_blank" class="nav">Top 50 WWW</a><br>
 » <a href="http://www.top50emu.com/enter/top50.cgi?coolrom" target="_blank" class="nav">Top 50 Emu</a><br>
 » <a href="http://www.bestromsites.com/vote.asp?id=37" target="_blank" class="nav">Best Rom Sites</a><br>
+» <a href="http://www.top26.net/?in=coolrom" target="_blank" class="nav">Top 26 Gaming</a><br>
 
+<br><br>
+
+<center><b>Members</b></center><br>
+
+
+» <a href="http://www.coolrom.com/members/login.php" class="nav">Login</a><br>
+» <a href="http://www.coolrom.com/members/index.php" class="nav">Learn More</a><br>
+» <a href="http://www.coolrom.com/members/register.php" class="nav">Register</a><br>
 <br><br>
 
 <center><b>Affiliates</b></center><br>
@@ -88,6 +94,7 @@
 » <a href="http://www.romcenter.com/linkexchange/clickin.php?acct=coolrom" target="_blank" class="nav">Rom Center</a><br>
 » <a href="http://www.angelroms.com" target="_blank" class="nav">Angel Roms</a><br>
 » <a href="http://www.bestdownload.com" target="_blank" class="nav">Best Download</a><br>
+» <a href="http://www.buttonbash.com" target="_blank" class="nav">Button Bash</a><br>
 » <a href="http://www.computeremuzone.com" target="_blank" class="nav">Computer Emuzone</a><br>
 » <a href="http://www.dr-emu.com" target="_blank" class="nav">Dr-Emu</a><br>
 » <a href="http://www.romshare.net" target="_blank" class="nav">Emu China</a><br>
@@ -105,6 +112,8 @@
 » <a href="http://www.moreroms.com" target="_blank" class="nav">More Roms</a><br>
 » <a href="http://www.retrobase.net" target="_blank" class="nav">Retro Base</a><br>
 » <a href="http://www.romnation.net" target="_blank" class="nav">Rom Nation</a><br>
+» <a href="http://www.rom-world.com" target="_blank" class="nav">Rom World</a><br>
+» <a href="http://www.trueroms.com" target="_blank" class="nav">True Roms</a><br>
 » <a href="http://www.coolrom.com/affiliate.php" class="nav">Your Site Here?</a><br>
 
 <br>
@@ -113,7 +122,7 @@
 
 <font size="1" color="#333333">
 <a target="_blank" href="http://t.extreme-dm.com/?login=coolrom1">
-<img src="http://t1.extreme-dm.com/i.gif" height="38" border="0" width="41" alt=""></a><script language="javascript1.2"><!--
+<img src="http://t1.extreme-dm.com/i.gif" height="1" border="0" width="1" alt=""></a><script language="javascript1.2"><!--
 EXs=screen;EXw=EXs.width;navigator.appName!="Netscape"?
 EXb=EXs.colorDepth:EXb=EXs.pixelDepth;//-->
 </script><script language="javascript"><!--
@@ -145,17 +154,14 @@ src="http://t0.extreme-dm.com/c.g?tag=coolrom1&j=n"></noscript>
    phpAds_random = new String (Math.random()); phpAds_random = phpAds_random.substring(2,11);
    
    document.write ("<" + "script language='JavaScript' type='text/javascript' src='");
-   document.write ("http://www.echangnet.com/phpAdsNew/adjs.php?n=" + phpAds_random);
-   document.write ("&amp;what=zone:3&amp;target=blank");
+   document.write ("http://ad.echangnet.com/adjs.php?n=" + phpAds_random);
+   document.write ("&amp;what=zone:5&amp;target=blank");
    document.write ("&amp;exclude=" + document.phpAds_used);
    if (document.referer)
       document.write ("&amp;referer=" + escape(document.referer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://www.echangnet.com/phpAdsNew/adjs.php?n=901617878&amp;what=zone:3&amp;target=blank&amp;exclude=,"></script><noscript><a href='http://www.echangnet.com/phpAdsNew/adclick.php?n=a7a0be2f' target='blank'><img src='http://www.echangnet.com/phpAdsNew/adview.php?what=zone:3&amp;n=a7a0be2f' border='0' alt=''></a></noscript>
-
-<br><br>
-
+</script><script language="JavaScript" type="text/javascript" src="http://ad.echangnet.com/adjs.php?n=722840526&amp;what=zone:5&amp;target=blank&amp;exclude=,"></script><noscript><a href='http://ad.echangnet.com/adclick.php?n=a1e709f9' target='blank'><img src='http://ad.echangnet.com/adview.php?what=zone:5&amp;n=a1e709f9' border='0' alt=''></a></noscript><br><br>
 <table width="125" border="0" cellspacing="0" cellpadding="0" align="center">
 <tbody><tr><td valign="top">
 
@@ -165,27 +171,21 @@ src="http://t0.extreme-dm.com/c.g?tag=coolrom1&j=n"></noscript>
 
 </center>
 
-<iframe src="http://www.coolrom.com/ads/gigex.com/gotd.php" width="125" height="300" scrolling="no" frameborder="0"></iframe>
+<iframe src="http://www.coolrom.com/ads/gamedaily.com/gotd.php" width="125" height="300" scrolling="no" frameborder="0"></iframe>
 
 </td></tr></tbody></table>
 
 </td></tr></tbody></table>
 
 <font size="2">
-
-
 
 <table width="382" bgcolor="#FFFFFF" cellspacing="1" cellpadding="3" align="center">
 <tbody><tr><td bgcolor="#333333">
 
 <font size="2">
 
-<center>
-
-<a href="http://www.coolrom.com/roms/index.php?system=PS2, PS, XBox, N64, and GBA" target="_blank" class="vote"><b>
+<a href="http://www.coolrom.com/rommirror/index.php?system=PS2, PS, XBox, N64, and GBA" target="_blank" class="vote"><b>
 Click here to get PS2, PS, XBox, N64, and GBA ROMs</b></a>
-
-</center>
 
 </font>
 
@@ -252,17 +252,14 @@ to contact us at
    var uaid = now.getTime() % Math.floor(8640000 - Math.random()*1000);
    document.write('<scr'+'ipt src="http://focusin.ads.targetnet.com//ad/id=echang&opt=hjj&rw=468&rh=60&cv=220&uid=' + uaid + '" ></scr'+'ipt>');
 //-->
-</script><script src="http://focusin.ads.targetnet.com//ad/id=echang&amp;opt=hjj&amp;rw=468&amp;rh=60&amp;cv=220&amp;uid=6027158"></script>
+</script><script src="http://focusin.ads.targetnet.com//ad/id=echang&amp;opt=hjj&amp;rw=468&amp;rh=60&amp;cv=220&amp;uid=4538499"></script>
 <noscript>
    <iframe allowTransparency="true" src="http://focusin.ads.targetnet.com//ad/id=echang&opt=hhn&rw=468&rh=60&cv=220&uid=1" width=468 height=60 frameborder=0 marginheight=0 marginwidth=0 scrolling="no">
    <a href="http://focusin.ads.targetnet.com//ad/id=echang&opt=cin&rw=468&rh=60&cv=220&uid=1" target="_top"><img 
      src="http://focusin.ads.targetnet.com//ad/id=echang&opt=hin&rw=468&rh=60&cv=220&uid=1" alt="Click here to visit our sponsor" width=468 height=60 border=0></a>
    </iframe>
 </noscript>
-<!--- end of focusIN code --->
-
-<br><br>
-
+<!--- end of focusIN code ---><br><br>
 Copyright © 2004
 <a href="http://www.echangnet.com" target="_blank">eCHANG Net</a>. 
 All rights reserved. 
