--- a/m/ma/mat/matcotools.com.html
+++ b/m/ma/mat/matcotools.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the matcotools.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607055156id_/http%3A//matcotools.com/CustomerCare/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the matcotools.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204180159id_/http%3A//www.matcotools.com/CustomerCare/privacy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Matco Tools - A Division of Danaher</title>
